# spark-fundamentos-101

./: Dockerfile  README.md  docker-compose.yaml
utils/: generate.py
utils/data-generator/: pyproject.toml
utils/output/: users.parquet
work/data/: car_prices-v2.csv  station_scores.csv
work/data/output/bike_station_risk/: .part-00000-63fc5f43-674b-4986-b220-da7bebe32249-c000.snappy.parquet.crc
work/notebooks/: 01_ler_arquivo_csv.ipynb  02_manipular_dados.ipynb  03_filtro_e_ordenacao.ipynb  04_agregacao.ipynb  05_joins.ipynb  06_persistindo_dados.ipynb  07_parquet.ipynb  08_parquet-vs-csv.ipynb  Untitled.ipynb  intro_delta_lake.ipynb  projeto-pratico-1-resolucao.ipynb
